# supercode-ai

./: .gitignore  ANALYSIS_REPORT_FA.md  Cargo.toml  README.md
.github/: copilot-instructions.md
docs/: CHANGELOG.md  DEVELOPMENT_FA.md  MODEL_SERVICE_FA.md  SKILLS_FA.md  TUI_REDESIGN_PLAN_FA.md
scripts/: install_llama.sh
scripts/skills/: project_scanner.wat
src/: config.rs  main.rs  types.rs
src/agent/: micro_agent.rs  mod.rs  plugin_engine.rs  project_scanner.rs  sub_agent.rs  super_agent.rs
src/cli/: commands.rs
src/graph/: dag.rs  fsm.rs  mod.rs
src/llm/: llama.rs  mock.rs  mod.rs
src/memory/: store.rs
src/models/: manager.rs  mod.rs  native.rs  server.rs
src/tools/: registry.rs
src/tui/: app.rs  keyboard.rs  layout.rs  mod.rs  theme.rs
src/tui/components/: command_palette.rs  lsp_support.rs  mod.rs  multi_session.rs  settings_panel.rs  sidebar.rs  slash_command.rs  task_manager.rs
src/tui/state/: mod.rs
src/tui/views/: agents.rs  dashboard.rs  mod.rs  models.rs  settings.rs  tasks.rs
