[package]
name = "super-agent"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1.0"
petgraph = "0.7"
ratatui = "0.20"
crossterm = "0.30"
log = "0.4"
env_logger = "0.10"
parking_lot = "0.12"
async-trait = "0.1"
anyhow = "1.0"
toml = "0.7"
dirs = "4.0"
axum = { version = "0.7", features = ["headers"] }
tracing = "0.2"
tracing-subscriber = "0.3"
which = "4.4"
wasmtime = { version = "11", features = ["async"] }
wasmtime-wasi = "11"
wat = { version = "1.0", optional = true }

[dev-dependencies]
wat = "1.0"
tempfile = "3.6"

# Native Model Support
gbuf = "0.2"  # For GGUF format
safetensors = "0.4"  # For SafeTensors format
ndarray = "0.16"  # For tensor operations

[features]
native-inference = ["dep:gbuf", "dep:safetensors", "dep:ndarray"]
default = ["native-inference"]

[profile.release]
opt-level = 3

[dev-dependencies]
tempfile = "3.6"

[workspace]

