[package]
name = "super-agent"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["rt-multi-thread", "macros", "net", "process", "signal"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1.0"
petgraph = "0.7"
ratatui = "0.20"
crossterm = "0.29"
log = "0.4"
env_logger = "0.10"
parking_lot = "0.12"
async-trait = "0.1"
anyhow = "1.0"
toml = "0.7"
dirs = "4.0"
axum = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
which = "4.4"
wasmtime = { version = "11", features = ["async"] }
wasmtime-wasi = "11"
wat = "1.0"

[dev-dependencies]
tempfile = "3.6"

[profile.release]
opt-level = 3

[workspace]
